# Neuropia

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Neuropia.pro  README.md  compiler.cmake  test_all.sh
.github/workflows/: neuropia.yml
app/: CMakeLists.txt  main.cpp
aspell/: neuropia_words.txt
cmake/: neuropia.cmake
example/compare/: CMakeLists.txt  main.cpp
example/romtest/: CMakeLists.txt  main.cpp
include/: argparse.h  default.h  evotrain.h  idxreader.h  logstream.h  matrix.h  neuropia.h  neuropia_env.h  neuropia_feed.h  neuropia_simple.h  paralleltrain.h  params.h  psrand.h  simple.h  trainer.h  trainerbase.h  utils.h  verify.h
neuropialib/: CMakeLists.txt  make_neuropia.sh  neuropialib.cmake  neuropialib.cpp  neuropialib.h
src/: argparse.cpp  evotrain.cpp  idxreader.cpp  main.cpp  neuropia.cpp  neuropia_simple.cpp  paralleltrain.cpp  params.cpp  silly.cpp  trainer.cpp  trainerbase.cpp  utils.cpp  verify.cpp
test/: CMakeLists.txt  main.cpp  testports.cpp
tests/: tests.txt  tests1.txt  tests10.txt  tests11.txt  tests12.txt  tests13.txt  tests14.txt  tests15.txt  tests16.txt  tests17.txt  tests18.txt  tests2.txt  tests20.txt  tests21.txt  tests22.txt  tests23.txt  tests3.txt  tests4.txt  tests5.txt  tests7.txt  tests8.txt  tests9.txt
utils/: bin2code.py  find_label.py  mit2idx.py  perftest.sh  printbin.py
utils/idxview/: CMakeLists.txt  gui.html  main.cpp
verify/: CMakeLists.txt  main.cpp
wasm/: CMakeLists.txt  Makefile  Neuropia.js  Neuropia.wasm  btest.sh  build.sh  build_wasm.sh  histogram.js  minimap.js  mnist_data.js  neuropia.css  neuropia.html  neuropia.js  neuropia.nrp  neuropia.wasm  neuropia_html.js  neuropia_t.js  neuropia_t.wasm  neuropia_t.wasm.map  neuropia_wasm.cpp  painter.js  simple.cpp  simple.h  startServer.sh
